force-app/main/default/objects/Hotel__c/Hotel__c.object-meta.xml
<CustomObject>
    <label>Hotel</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Hotel  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>