force-app/main/default/objects/Hotel__c/fields/Adherent_RI__c.field-meta.xml
<CustomField>
    <fullName>Adherent_RI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhérent RI</label>
    <type>Checkbox</type>
</CustomField>