force-app/main/default/objects/Hotel__c/fields/Commercial_Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Hotel_Name__c</fullName>
    <label>Commercial Hotel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>