force-app/main/default/objects/Hotel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <label>United Arab Emirates</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AX</fullName>
                <label>Aland Islands</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bosnia and Herzegovina</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BF</fullName>
                <label>Burkina Faso</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Burundi</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Saint Barthélemy</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>Brunei Darussalam</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia, Plurinational State of</label>
            </value>
            <value>
                <fullName>BQ</fullName>
                <label>Bonaire, Sint Eustatius and Saba</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>