force-app/main/default/objects/Hotel__c/fields/GPS_code__c.field-meta.xml
<CustomField>
    <fullName>GPS_code__c</fullName>
    <label>GPS code</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>