force-app/main/default/objects/Hotel__c/fields/GroupHotelCountry__c.field-meta.xml
<CustomField>
    <fullName>GroupHotelCountry__c</fullName>
    <label>GroupHotelCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>