force-app/main/default/objects/Hotel__c/fields/Hotel_definitly_closed__c.field-meta.xml
<CustomField>
    <fullName>Hotel_definitly_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotel definitly closed</label>
    <type>Checkbox</type>
</CustomField>