force-app/main/default/objects/Hotel__c/fields/Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hotel ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>