force-app/main/default/objects/Hotel__c/fields/International_phone_number__c.field-meta.xml
<CustomField>
    <fullName>International_phone_number__c</fullName>
    <label>International phone number</label>
    <type>Phone</type>
</CustomField>