force-app/main/default/objects/Hotel__c/fields/Invitations_existantes__c.field-meta.xml
<CustomField>
    <fullName>Invitations_existantes__c</fullName>
    <description>Number of VOuchers OC existing for an hotel</description>
    <label>Invitations existantes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>