force-app/main/default/objects/Hotel__c/fields/Invitations_Restantes__c.field-meta.xml
<CustomField>
    <fullName>Invitations_Restantes__c</fullName>
    <description>Number of remaining Vouchers OC for an hotel</description>
    <formula>Maximun_invitations__c  -  Invitations_existantes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitations Restantes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>