force-app/main/default/objects/Hotel__c/fields/Local_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Local_phone_number__c</fullName>
    <label>Local phone number</label>
    <type>Phone</type>
</CustomField>