force-app/main/default/objects/Hotel__c/fields/Main_cities__c.field-meta.xml
<CustomField>
    <fullName>Main_cities__c</fullName>
    <label>Main cities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>