force-app/main/default/objects/Hotel__c/fields/Maximun_invitations__c.field-meta.xml
<CustomField>
    <fullName>Maximun_invitations__c</fullName>
    <description>Maximum of vouchers OC allowed for an hotel</description>
    <label>Maximun d&apos;invitations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>