force-app/main/default/objects/Hotel__c/fields/Opening_date__c.field-meta.xml
<CustomField>
    <fullName>Opening_date__c</fullName>
    <label>Opening date</label>
    <type>Date</type>
</CustomField>