force-app/main/default/objects/Hotel__c/fields/Phone_number_commercial__c.field-meta.xml
<CustomField>
    <fullName>Phone_number_commercial__c</fullName>
    <label>Phone number (commercial)</label>
    <type>Phone</type>
</CustomField>