force-app/main/default/objects/Hotel__c/fields/Region_DR__c.field-meta.xml
<CustomField>
    <fullName>Region_DR__c</fullName>
    <label>Region DR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ouest</fullName>
            </value>
            <value>
                <fullName>Sud</fullName>
            </value>
            <value>
                <fullName>Centre-Est</fullName>
            </value>
            <value>
                <fullName>Paris IDF</fullName>
            </value>
            <value>
                <fullName>Est-Centre Ouest</fullName>
            </value>
            <value>
                <fullName>Nord</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>SALARIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>