force-app/main/default/objects/Hotel__c/fields/Renovation_date__c.field-meta.xml
<CustomField>
    <fullName>Renovation_date__c</fullName>
    <label>Renovation date</label>
    <type>Date</type>
</CustomField>