force-app/main/default/objects/Hotel__c/fields/Rooms_number__c.field-meta.xml
<CustomField>
    <fullName>Rooms_number__c</fullName>
    <label>Rooms number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>