force-app/main/default/objects/Hotel__c/fields/Technical_hotel_name__c.field-meta.xml
<CustomField>
    <fullName>Technical_hotel_name__c</fullName>
    <label>Technical hotel name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>