force-app/main/default/objects/Hotel__c/fields/Trust_You_ID__c.field-meta.xml
<CustomField>
    <fullName>Trust_You_ID__c</fullName>
    <label>Trust You ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>