force-app/main/default/objects/Hotel__c/fields/ZIP_code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_code__c</fullName>
    <label>ZIP code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>