force-app/main/default/objects/Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Commercial_Hotel_Name__c</columns>
    <columns>Technical_hotel_name__c</columns>
    <columns>NAME</columns>
    <columns>Adress__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trust_You_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>