force-app/main/default/objects/Hotel__c/listViews/French_H_tels.listView-meta.xml
<ListView>
    <fullName>French_H_tels</fullName>
    <columns>Commercial_Hotel_Name__c</columns>
    <columns>Technical_hotel_name__c</columns>
    <columns>NAME</columns>
    <columns>Hotel_ID__c</columns>
    <columns>Adress__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Technical BBUS</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>FR,France</value>
    </filters>
    <label>French Hôtels</label>
</ListView>